fix: 자동로그인 오류 수정(카카오 로그인)